@@ -11,19 +11,25 @@ import random
 from datetime import date
 
 from beancount.core import convert
+from beancount.core import display_context
+from beancount.core import inventory
+from beancount.core import prices
 from beancount.core.data import create_simple_posting as P
 from beancount.core.data import create_simple_posting_with_cost as PCost
 from beancount.core.position import Cost
 from beancount.core.position import Position
-from beancount.core.position import from_string
 from beancount.core.position import from_amounts
+from beancount.core.position import from_string
+from beancount.parser import cmptest
+from beancount import loader
 
 from beancount.core.number import ZERO
 from beancount.core.number import MISSING
 from beancount.core.number import D
 from beancount.core.amount import A
 from beancount.core.amount import Amount
-from beancount.core import display_context
+from beancount.core.number import D
+from beancount.core.amount import A
 
 from beancount.core import data
 from beancount.core import prices
@@ -256,3 +262,71 @@ class TestPostingConversions(TestPositionConversions):
         pos = self._pos(A("100 HOOL"), None, A("99999 USD"))
         self.assertEqual(A("63600.00 CAD"),
                          convert.convert_position(pos, "CAD", self.PRICE_MAP_HIT))
+
+
+class TestMarketValue(unittest.TestCase):
+
+    @loader.load_doc()
+    def setUp(self, entries, _, __):
+        """
+        2013-06-01 price  USD  1.01 CAD
+        2013-06-05 price  USD  1.05 CAD
+        2013-06-06 price  USD  1.06 CAD
+        2013-06-07 price  USD  1.07 CAD
+        2013-06-10 price  USD  1.10 CAD
+
+        2013-06-01 price  HOOL  101.00 USD
+        2013-06-05 price  HOOL  105.00 USD
+        2013-06-06 price  HOOL  106.00 USD
+        2013-06-07 price  HOOL  107.00 USD
+        2013-06-10 price  HOOL  110.00 USD
+
+        2013-06-01 price  AAPL  91.00 USD
+        2013-06-05 price  AAPL  95.00 USD
+        2013-06-06 price  AAPL  96.00 USD
+        2013-06-07 price  AAPL  97.00 USD
+        2013-06-10 price  AAPL  90.00 USD
+        """
+        self.price_map = prices.build_price_map(entries)
+
+    def test_no_change(self):
+        balances = inventory.from_string('100 USD')
+        market_value = balances.reduce(convert.get_value, self.price_map,
+                                       datetime.date(2013, 6, 6))
+        self.assertEqual(inventory.from_string('100 USD'), market_value)
+
+    def test_other_currency(self):
+        balances = inventory.from_string('100 CAD')
+        market_value = balances.reduce(convert.get_value, self.price_map,
+                                       datetime.date(2013, 6, 6))
+        self.assertEqual(inventory.from_string('100 CAD'), market_value)
+
+    def test_mixed_currencies(self):
+        balances = inventory.from_string('100 USD, 90 CAD')
+        market_value = balances.reduce(convert.get_value, self.price_map,
+                                       datetime.date(2013, 6, 6))
+        self.assertEqual(inventory.from_string('100 USD, 90 CAD'), market_value)
+
+    def test_stock_single(self):
+        balances = inventory.from_string('5 HOOL {0.01 USD}')
+        market_value = balances.reduce(convert.get_value, self.price_map,
+                                       datetime.date(2013, 6, 6))
+        self.assertEqual(inventory.from_string('530 USD'), market_value)
+
+    def test_stock_many_lots(self):
+        balances = inventory.from_string('2 HOOL {0.01 USD}, 3 HOOL {0.02 USD}')
+        market_value = balances.reduce(convert.get_value, self.price_map,
+                                       datetime.date(2013, 6, 6))
+        self.assertEqual(inventory.from_string('530 USD'), market_value)
+
+    def test_stock_different_ones(self):
+        balances = inventory.from_string('2 HOOL {0.01 USD}, 2 AAPL {0.02 USD}')
+        market_value = balances.reduce(convert.get_value, self.price_map,
+                                       datetime.date(2013, 6, 6))
+        self.assertEqual(inventory.from_string('404 USD'), market_value)
+
+    def test_stock_not_found(self):
+        balances = inventory.from_string('2 MSFT {0.01 USD}')
+        market_value = balances.reduce(convert.get_value, self.price_map,
+                                       datetime.date(2013, 6, 6))
+        self.assertEqual(inventory.from_string('2 MSFT'), market_value)
