@@ -267,56 +267,3 @@ def get_price(price_map, base_quote, date=None):
             return price_list[index-1]
     except KeyError:
         return None, None
-
-
-# FIXME: This is going to get replaced by b.c.convert().
-def get_position_market_value(pos, date, price_map):
-    """Compute the market value of the position at a particular date.
-
-    If the price map does not contain price information, we avoid converting the
-    position and return itself, unchanged.
-
-    Args:
-      pos: An instance of Position
-      date: A datetime.date instance, the date at which to market the instruments.
-        If the date provided is None, the inventory is valued at the latest market
-        prices.
-      price_map: A price map, as created by beancount.core.prices.
-    Returns:
-      An inventory of market values per currency.
-
-    """
-    cost_currency = pos.cost.currency if pos.cost else None
-    if cost_currency:
-        base_quote = (pos.units.currency, cost_currency)
-        price_date, price_number = get_price(price_map, base_quote, date)
-        if price_number is None:
-            return pos
-        else:
-            new_amount = amount.Amount(pos.units.number * price_number, cost_currency)
-    else:
-        new_amount = pos.units
-    return position.from_amounts(new_amount)
-
-
-# FIXME: This is going to get replaced by b.c.convert().
-def get_inventory_market_value(balance, date, price_map):
-    """Compute the market value of the inventory in a currency at a date.
-
-    This function converts all the positions to their market value, in their
-    respective cost currencies.
-
-    Args:
-      balance: An instance of Inventory.
-      date: A datetime.date instance, the date at which to market the instruments.
-        If the date provided is None, the inventory is valued at the latest market
-        prices.
-      price_map: A price map, as created by beancount.core.prices.
-    Returns:
-      An inventory of market values per currency.
-    """
-    new_balance = inventory.Inventory()
-    for position_ in balance.get_positions():
-        new_balance.add_position(
-            get_position_market_value(position_, date, price_map))
-    return new_balance
